Update Cloud Function configuration: CPU=2, MAX_INSTANCES=5
- Set CPU to 2 (required when concurrency > 1)
- Set MAX_INSTANCES to 5 (increased from 3)

--- a/LightrunAdapted/cloudbuild.yaml
+++ b/LightrunAdapted/cloudbuild.yaml
@@ -32,6 +32,7 @@ steps:
       - '--max-instances=${_MAX_INSTANCES}'   # Max instances
       - '--timeout=${_TIMEOUT}'              # Function timeout in seconds
       - '--concurrency=${_CONCURRENCY}'       # Max concurrent requests per instance
+      - '--cpu=${_CPU}'                      # CPU allocation (required when concurrency > 1)
 
 # Default substitution variables - ALL can be overridden in Cloud Build trigger settings
 # Override these in the trigger to deploy different functions without committing changes
@@ -44,9 +45,10 @@ substitutions:
   _TRIGGER_BUCKET: 'lightrun-image-input'
   _ENV_VARS: 'BLURRED_BUCKET_NAME=lightrun-image-output'
   _MIN_INSTANCES: '0'                        # Scale to zero when idle (cost savings)
-  _MAX_INSTANCES: '3'                       # Max 3 concurrent instances
+  _MAX_INSTANCES: '5'                       # Max 5 concurrent instances
   _TIMEOUT: '540'                           # Function timeout: 540 seconds (9 minutes, max for Gen2)
   _CONCURRENCY: '80'                        # Max concurrent requests per instance (default for Gen2)
+  _CPU: '2'                                 # CPU allocation: 2 CPUs (required when concurrency > 1)
 
 # Options - using default (cheapest) machine type
 options:
