--- a/LightrunAdapted/cloudbuild.yaml
+++ b/LightrunAdapted/cloudbuild.yaml
@@ -32,6 +32,7 @@ steps:
       - '--max-instances=${_MAX_INSTANCES}'   # Max instances
       - '--timeout=${_TIMEOUT}'              # Function timeout in seconds
       - '--concurrency=${_CONCURRENCY}'       # Max concurrent requests per instance
+      - '--memory=${_MEMORY}'                 # Memory allocation (required when using --cpu)
       - '--cpu=${_CPU}'                      # CPU allocation (required when concurrency > 1)
 
 # Default substitution variables - ALL can be overridden in Cloud Build trigger settings
@@ -48,6 +49,7 @@ substitutions:
   _MAX_INSTANCES: '5'                       # Max 5 concurrent instances
   _TIMEOUT: '540'                           # Function timeout: 540 seconds (9 minutes, max for Gen2)
   _CONCURRENCY: '80'                        # Max concurrent requests per instance (default for Gen2)
+  _MEMORY: '512Mi'                          # Memory allocation: 512Mi (required when using --cpu)
   _CPU: '2'                                 # CPU allocation: 2 CPUs (required when concurrency > 1)
 
 # Options - using default (cheapest) machine type
