--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ service-account-*.json
 # IDE
 .vscode/
 .idea/
+.cursorrules
 *.swp
 *.swo
 *~
@@ -28,3 +29,8 @@ Thumbs.db
 dist/
 build/
 *.log
+*.png
+
+# Test results
+**/test_cold_starts/test_results/
+**/test_cold_starts/src/test_results/
